--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
      - chatserver
     networks:
      - chatnet
+    stdin_open: true
+    tty: true
 
   chat-console2:
     build:
@@ -22,6 +24,8 @@ services:
      - chatserver
     networks:
      - chatnet
+    stdin_open: true
+    tty: true
 
 networks:
   chatnet:
